src/slider.css
#slider-container{
    height: 40vh;
    width: 100%;
    background-color: inherit;
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    margin-top: 12vh;
    justify-content: flex-start;
    align-items: center;
    padding: 0px 20px;
    gap: 10px;
    align-self: center;
}
 
#slider-container > div{
    height: 95%;
    border-radius: 15px;
    background-color: #FFF;
    background-size: 150px;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    background-position: center;
}
#slider-container > div:hover{
    background-color: #FFA836;
}
#slider-container > div > button{
    background-color: #FFA836;
    color: black;
    font-weight: 700;
    width: 80%;
    height: 20%;
    position: relative;
    bottom: 10px;
    border: none;
    border-radius: 15px;
}
#slider-container > div:hover > button{
    background-color: #FFF;
    color: #FFA836;
}
@media all and (max-width: 1000px) {
    #slider-container{
        grid-template-columns: repeat(5, max(30%, 150px));
        overflow-x: scroll;
    }
}

